# maxsattrainscheduling

./: 2022-03-07-results-email.csv  2022-03-07-results-email.txt  2022-03-07-results1.txt  2022-03-07-results2.txt  2022-03-07-results4.txt  2022-03-21 comparison.xlsx  2022-05-16-iterations_bigmlazy.txt  2022-06-28-cont.json  2022-06-28-infsteps180.json  2023-05-23-onestep.json  Cargo.toml  Makefile  README  README.md  build.rs  dddunarytransform_twovars.py  makefile  mk_table.py  note.md  perftable.tex  rustfmt.toml  table1-2022-03-21.txt  table2-2022-03-21.txt
InstanceResults/: BigMCompleteSol1.txt  BigMCompleteSol10.txt  BigMCompleteSol11.txt  BigMCompleteSol12.txt  BigMCompleteSol13.txt  BigMCompleteSol15.txt  BigMCompleteSol16.txt  BigMCompleteSol17.txt  BigMCompleteSol18.txt  BigMCompleteSol22.txt  BigMCompleteSol24.txt  BigMCompleteSol5.txt  BigMCompleteSol6.txt  BigMCompleteSol7.txt  BigMCompleteSol8.txt  BigMCompleteSol9.txt  BigMLazyConSol1.txt  BigMLazyConSol10.txt  BigMLazyConSol11.txt  BigMLazyConSol14.txt  BigMLazyConSol15.txt  BigMLazyConSol18.txt  BigMLazyConSol23.txt  BigMLazyConSol24.txt  BigMLazyConSol4.txt  BigMLazyConSol9.txt  Instance10.txt  Instance15.txt  Instance16.txt  Instance18.txt  Instance21.txt  Instance7.txt
ModelsBigM/: BigMLazyCon_1.lp  BigMLazyCon_10.lp  BigMLazyCon_14.lp  BigMLazyCon_17.lp  BigMLazyCon_18.lp  BigMLazyCon_19.lp  BigMLazyCon_20.lp  BigMLazyCon_21.lp  BigMLazyCon_22.lp  BigMLazyCon_23.lp  BigMLazyCon_24.lp  BigMLazyCon_5.lp  BigMLazyCon_6.lp  BigMLazyCon_7.lp  BigMLazyCon_8.lp  BigM_1.lp  BigM_10.lp  BigM_12.lp  BigM_15.lp  BigM_16.lp  BigM_18.lp  BigM_19.lp  BigM_20.lp  BigM_22.lp  BigM_23.lp  (+3 more)
debuggui/: Cargo.toml
debuggui/src/: main.rs  widgets.rs
heuristic/: 2022-11-23-results.ods  Cargo.toml  literature.txt  origA11_rh.json  origA11_sol_3331.json  trackB12_rh.json  trackB12_sol_15182.json  trackb12_optimal_priorities.txt
heuristic/src/: branching.rs  dag_train.rs  globalsearch.rs  interval.rs  lib.rs  main.rs  node_eval.rs  occupation.rs  problem.rs  queue_train.rs  simulator.rs  singletrain.rs  solver.rs  train.rs  trainset.rs
heuristic/src/solvers/: bnb_solver.rs  mod.rs  solver_brb.rs  solver_heurheur.rs  solver_heurheur2.rs  solver_mcts.rs  solver_random.rs  train_dag.rs  train_queue.rs
(+275 files in other folders)
