[package]
name = "ddd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
satcoder = { path = "../../salvers/satcoder" }
typed-index-collections = "3.0"
derive_more = "0.99"
roxmltree = "0.14"
log = "0.4"
chrono = "0.4"