[package]
name = "ddd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
satcoder = { path = "../salvers/satcoder" }

typed-index-collections = "3.0"
derive_more = "0.99"
roxmltree = "0.14"
log = "0.4"
chrono = "0.4"
hprof="0.1"
grb="1.3"
structopt="0.3"
idl = { path = "../salvers/idl" }
lazy_static="1.4"
pretty_env_logger = "0.4"
serde_json = "1.0"
serde = { version = "1.0.193", features = ["derive"] }
#highs-sys = "1.2"
