[package]
name = "debuggui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend_glfw = { git="https://github.com/luteberget/junction", rev = "06bd76d81a169338411b94a057e397290c46a19a" }
ddd = { path = "../" }
const-cstr = "0.3"
itertools = "0.10"
satcoder = { path = "../../../salvers/satcoder" }
