[package]
name = "heuristic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tinyvec = { version = "1.6", features = ["alloc", "serde"] }
log = "0.4"
ddd_problem = { path = "../ddd_problem" }
itertools = "0.10"